crates/graphcal-eval/tests/snapshots/error_snapshots__error_det_abstract_axis.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 123
expression: rendered
---
incompatible indexed shape for `det()`: expected an axis with a concrete cardinality, found an axis whose cardinality is still generic
    Diagnostic severity: error
Begin snippet for det_abstract_axis.gcl starting at line 4, column 1

snippet line 4:     param matrix: Length[Axis, Axis];
snippet line 5:     pub node result: Dimensionless = det(@matrix);
    label at line 5, columns 42 to 48: found an axis whose cardinality is still generic
snippet line 6: }
diagnostic help: det() needs a concrete matrix size because its result dimension depends on that size
diagnostic code: graphcal::D022
