crates/graphcal-eval/tests/snapshots/error_snapshots__error_division_by_zero.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
division by zero
