crates/graphcal-eval/tests/snapshots/error_snapshots__error_domain_field_min_exceeds_max.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
domain constraint on `Foo.x`: min (100 kg) exceeds max (50 kg)
    Diagnostic severity: error
Begin snippet for domain_field_min_exceeds_max.gcl starting at line 2, column 1

snippet line 2: type Foo {
snippet line 3:     Foo(x: Mass(min: 100.0 kg, max: 50.0 kg)),
    label at line 3, columns 17 to 43: min > max
snippet line 4: }
diagnostic help: the min bound must be less than or equal to the max bound
diagnostic code: graphcal::C003
