crates/graphcal-eval/tests/snapshots/error_snapshots__error_domain_field_runtime_violation.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 495
expression: rendered
---
field `SatelliteSpec.mass` above maximum (2000 kg)
